base/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: springpetclinic-ingress
  namespace: samplepetclinic
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
    - host: ""
      http:
        paths:
          - path: /pets
            pathType: Prefix
            backend:
              service:
                name: springpetclinic-service
                port:
                  number: 8080
